Support theme switch

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,16 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Slides</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!--<link rel="stylesheet" type="text/css" media="screen" href="main.css" />-->
 </head>
 
 <body style="height: 100%; width: 100%; margin: 0em; overflow: hidden;">
   <div id=app></div>
+  <link rel="stylesheet" href="https://unpkg.com/reveal.js@3.6.0/css/reveal.css" />
+  <link rel="stylesheet" href="" id="reveal-theme" />
 </body>
 
 </html>
