--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Slides</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!--<link rel="stylesheet" type="text/css" media="screen" href="main.css" />-->
+  <base href="" id="baseurl"/>
 </head>
 
 <body style="height: 100%; width: 100%; margin: 0em; overflow: hidden;">
